# dapp360_2022_t4

./: Bip.hs  CHANGELOG.md  Main.hs  README.md  dapp3602022-t4.cabal  demo.txt
app/: Main.hs  bip39_english.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Bip.hs  Main.hs
