cabal-version:      2.4
name:               dapp3602022-t4
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: dapp360 team4 project

-- A longer description of the package.
-- description: help users generate and recover a seed phrase without writing it down any place

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alexander Watanabe
maintainer:         alex.watanabe@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable dapp3602022-t4
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        random-shuffle ^>=0.0.4,
        random
    hs-source-dirs:   app
    default-language: Haskell2010
